prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/delete_op_forbidden.diag.txt
ERROR: Usage of 'delete' operator is forbidden. Use 'o.rawdelete("key")' instead
testData/diagnostics/compilation_errors/syntax_errors/delete_op_forbidden.nut:4:0

let t = {a = 1}
delete t.a
^-----


